# mgb-dash-2026

./: .gitignore  CLAUDE.md  README.md  deploy.ps1  notes.txt  pyproject.toml
common/: README.md  can_ids.json
common/cpp/: can_ids.h  leaf_messages.h  log_events.h  resolve_messages.h
common/python/: __init__.py  can_ids.py  can_listener.py  can_log.py  leaf_messages.py  log_setup.py  resolve_messages.py  version.py
docs/: Pi-Main-PinOut.xlsx  body-controller-pinout.md  gen_pinout.py  various diagrams.pptx  vehicle-specs.md
esp32/: lvgl_pio_fix.py  partitions_16MB.csv  platformio.ini  pre_build_version.py
esp32/lib/BleBridge/: BleBridge.cpp  BleBridge.h
esp32/lib/BleClient/: BleClient.cpp  BleClient.h
esp32/lib/CanBus/: CanBus.cpp  CanBus.h
esp32/lib/CanLog/: CanLog.cpp
esp32/lib/ClockDial/: ClockDial.cpp  ClockDial.h
esp32/lib/Ephemeris/: Ephemeris.cpp  Ephemeris.h
esp32/lib/Heartbeat/: Heartbeat.cpp
esp32/lib/LeafCan/: LeafCan.cpp  LeafCan.h
esp32/lib/LedRing/: LedRing.cpp  LedRing.h
esp32/lib/QspiDisplay/: QspiDisplay.cpp  QspiDisplay.h
esp32/lib/StepperWheel/: StepperWheel.cpp  StepperWheel.h
esp32/src/body_controller/: README.md  main.cpp
esp32/src/gps_display/: lv_conf.h  main.cpp
esp32/src/servo_gauge/: README.md  main.cpp
esp32/src/speedometer/: README.md  main.cpp
firmware/: platformio.ini
gps-display/: main.py  presenter.py  pyproject.toml  requirements.txt
gps-display/lib/: __init__.py  lcdconfig.py
phone-app/: README.md  index.html  manifest.json  sw.js
phone-app/css/: style.css
phone-app/js/: app.js  ble-source.js  can-decoder.js  demo-source.js  ui.js  vehicle-state.js
pi-setup/: README.md  base.sh  gps-display.sh  primary-display.sh  test-monitor.sh  wifi-networks.example.conf
primary-display/: display_engine.py  main.py  pyproject.toml  requirements.txt
primary-display/contexts/: diagnostics.py
primary-display/data_sources/: base.py  synthetic_source.py
primary-display/rendering/: colors.py  fonts.py
python/gps-display/: README.md  ephemeris.py  main.py  presenter.py  pyproject.toml
python/primary-display/: README.md  clock_sync.py  display_engine.py  main.py  pyproject.toml  shift_advisor.py  vehicle_state.py
python/primary-display/contexts/: alerts.py  base.py  charging.py  context_manager.py  diagnostics.py  driving.py  idle.py  startup.py
python/primary-display/data_sources/: base.py  can_source.py  synthetic_source.py
python/primary-display/rendering/: cairo_helpers.py  colors.py
python/tools/: README.md  can_cell_query.py  can_emulate.py  can_inject.py  can_monitor.py  can_replay.py  can_scan.py  can_stress.py  codegen.py  pyproject.toml
tools/: can_cell_query.py  can_emulate.py  can_inject.py  can_monitor.py  can_replay.py  can_scan.py  can_stress.py  codegen.py  pyproject.toml  requirements.txt
(+12 files in other folders)
