[project]
name = "mgb-tools"
version = "0.1.0"
description = "MGB Dash 2026 — CLI Diagnostic Tools"
requires-python = ">=3.9"
dependencies = [
    "python-can>=4.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "codegen",
    "can_monitor",
    "can_emulate",
    "can_inject",
    "can_replay",
    "can_scan",
    "can_stress",
    "can_cell_query",
]

[project.scripts]
can-monitor = "can_monitor:main"
can-emulate = "can_emulate:main"
can-inject = "can_inject:main"
can-replay = "can_replay:main"
can-stress = "can_stress:main"
can-cell-query = "can_cell_query:main"
can-scan = "can_scan:main"
